# vehicle-app-cpp-sdk

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .licensechecker.yml  .ort.yml  .pre-commit-config.yaml  .velocitas-lock.json  .velocitas.json  AppManifest.json  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  CPPLINT.cfg  NOTICE-3RD-PARTY-CONTENT.md  NOTICE.md  README.md  build.sh  conan.lock.dis  conanfile.py  gcovr.cfg  install_dependencies.sh  license_header.txt  prerequisite_settings.json  requirements.txt  whitelisted-licenses.txt
.conan/profiles/: linux-aarch64  linux-x86_64  linux_aarch64  linux_aarch64_debug  linux_aarch64_release  linux_armv8  linux_x86_64  linux_x86_64_debug  linux_x86_64_release
.dapr/: config.yaml
.dapr/components/: pubsub.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: configure-proxies.sh  copy-certificates.sh  ensure-dapr.sh  onCreateCommand.sh  post-create.sh  reinstall-cmake.sh  setup-dependencies.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  feature-request.yml  question.yml
.github/scripts/: deploy_image_from_artifact.sh
.github/workflows/: app-build-ci.yml  build-docker-image-singlearch.yml  check-licenses.yml  ci.yml  ensure-lifecycle.yml  project-creation.yaml  release.yml  sdk-build-container.yml
.project-creation/: config.json  run.py
.project-creation/.skeleton/: AppManifest.json  (+3 more)
.project-creation/.skeleton/tests/utests/: CMakeLists.txt  SkeletonApp_test.cpp
.project-creation/templates/: .gitmodules  CMakeLists.txt  build.sh  conanfile.txt  gcovr.cfg  install_dependencies.sh
.project-creation/templates/.conan/profiles/: linux_aarch64_debug  linux_aarch64_release  linux_x86_64_release
.project-creation/templates/.devcontainer/tests/automated_tests/: requirements_test.py  runtime_test.py
.scripts/: common.sh  conanfile-merger.py  test_package.sh
app/: CMakeLists.txt  Dockerfile
cmake/: armv8.cmake  x86_64.cmake  x86_64_to_aarch64.cmake
examples/: CMakeLists.txt
examples/SeatAdjuster/: CMakeLists.txt  SeatAdjusterApp.cpp
examples/example_model/: CMakeLists.txt
examples/example_model/vehicle/: Vehicle.h
examples/example_model/vehicle/Cabin/: Cabin.h
examples/example_model/vehicle/Cabin/Seat/: Seat.h
examples/grpc_client/: AppManifest.json  CMakeLists.txt  README.md
examples/grpc_client/src/: CMakeLists.txt  Launcher.cpp
examples/grpc_server/: AppManifest.json  CMakeLists.txt  README.md
examples/grpc_server/src/: CMakeLists.txt  Launcher.cpp  SeatsServiceImpl.cpp  SeatsServiceImpl.h
examples/performance-subscribe/: AppManifest.json  CMakeLists.txt  README.md  subscription_signals.json
examples/performance-subscribe/src/: Launcher.cpp  PerformanceTestApp.cpp  PerformanceTestApp.h
examples/seat-adjuster/: AppManifest.json  CMakeLists.txt
examples/seat-adjuster/src/: SeatAdjusterApp.cpp  SeatAdjusterApp.h
examples/set-data-points/: AppManifest.json  CMakeLists.txt
examples/set-data-points/src/: SetDataPointsApp.cpp
examples/vehicle_model/: CMakeLists.txt  Vehicle.cpp  Vehicle.h
examples/vehicle_model/Cabin/: Cabin.cpp  Cabin.h
examples/vehicle_model/Cabin/Seat/: Seat.cpp  Seat.h
examples/vehicle_model/Cabin/SeatService/: SeatService.cpp  SeatService.h  SeatServiceAsyncGrpcFacade.cpp  SeatServiceAsyncGrpcFacade.h
examples/vehicle_model/service/: CPPLINT.cfg  seats.grpc.pb.cc  seats.grpc.pb.h  seats.pb.cc  seats.pb.h  seats_mock.grpc.pb.h
sdk/: CMakeLists.txt  CMakeUserPresets.json  Dockerfile
sdk/proto/: CMakeLists.txt
sdk/proto/kuksa/val/v2/: types.proto
sdk/proto/sdv/databroker/v1/: broker.proto  collector.proto  types.proto
sdk/src/: CMakeLists.txt
sdk/src/sdk/: DataPoint.cpp  DataPointValue.cpp  DataPointValues.cpp  Job.cpp  Logger.cpp  Model.cpp  Node.cpp  QueryBuilder.cpp  ThreadPool.cpp  Utils.cpp  VehicleApp.cpp
sdk/src/sdk/dapr/: DaprSupport.cpp
sdk/src/sdk/grpc/: AsyncGrpcFacade.cpp  BrokerAsyncGrpcFacade.cpp  BrokerAsyncGrpcFacade.h  GrpcClient.cpp  GrpcDataPointValueProvider.cpp  VehicleDataBrokerClient.cpp
sdk/src/sdk/middleware/: DaprMiddleware.cpp  DaprMiddleware.h  Middleware.cpp  NativeMiddleware.cpp  NativeMiddleware.h
sdk/src/sdk/pubsub/: MqttPubSubClient.cpp
sdk/src/sdk/vdb/: DataPointBatch.cpp  IVehicleDataBrokerClient.cpp
sdk/src/sdk/vdb/grpc/: KuksaValV2AsyncGrpcFacade.cpp  KuksaValV2AsyncGrpcFacade.h  KuksaValV2Client.cpp
sdk/src/sdk/vdb/grpc/common/: ChannelConfiguration.cpp  ChannelConfiguration.h  TypeConversions.cpp  TypeConversions.h
sdk/src/sdk/vdb/grpc/kuksa_val_v2/: BrokerAsyncGrpcFacade.cpp  BrokerAsyncGrpcFacade.h  BrokerClient.cpp  BrokerClient.h  Metadata.cpp  Metadata.h  TypeConversions.cpp  TypeConversions.h
sdk/src/sdk/vdb/grpc/sdv_databroker_v1/: BrokerAsyncGrpcFacade.cpp  BrokerAsyncGrpcFacade.h  BrokerClient.cpp  BrokerClient.h  GrpcDataPointValueProvider.cpp  GrpcDataPointValueProvider.h  IDataPointValueProvider.h
sdk/tests/: CMakeLists.txt
sdk/tests/mocks/: BrokerStubMock.h  MockIPubSubClient.h  VehicleDataBrokerClientMock.h
sdk/tests/model/: Vehicle.h
sdk/tests/unit/: AsyncResult_tests.cpp  AsyncSubscription_tests.cpp  CMakeLists.txt  DaprMiddleware_tests.cpp  DataPointBatch_tests.cpp  DataPointValue_tests.cpp  DataPoint_tests.cpp  Job_tests.cpp  Logger_tests.cpp  Middleware_tests.cpp  NativeMiddleware_tests.cpp  Node_tests.cpp  PubSub_tests.cpp  QueryBuilder_tests.cpp  ScopedBoolInverter_tests.cpp  TestBaseUsingEnvVars.cpp  TestBaseUsingEnvVars.h  ThreadPool_tests.cpp  Utils_tests.cpp  VehicleDataBrokerClient_tests.cpp  testmain.cpp
sdk/tests/unit/grpc/: GrpcClient_tests.cpp
sdk/tests/unit/vdb/grpc/kuksa_val_v2/: TypeConversions_tests.cpp
sdk/tests/unit/vdb/grpc/sdv_databroker_v1/: BrokerClient_tests.cpp
sdk/tests/utests/: AsyncSubscription_tests.cpp  CMakeLists.txt  Job_tests.cpp  ScopedBoolInverter_tests.cpp  ThreadPool_tests.cpp  Utils_tests.cpp  VehicleDataBrokerClient_tests.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main.cpp
(+316 files in other folders)
